k8s/apps/blog/blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
spec:
  revisionHistoryLimit: 10
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        # spin up 1 extra pod before terminating old
      maxUnavailable: 0  # never terminate a pod until new one is Ready
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app
          readinessProbe:
            httpGet:
              path: /actuator/health  # health endpoint
              port: 8080
            initialDelaySeconds: 30   # Spring Boot needs time to start
            periodSeconds: 5
            failureThreshold: 3
          image: mudris100/blog-app:v1
          ports:
            - containerPort: 8080
